--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,13 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link href="https://fonts.googleapis.com/css2?family=Chivo&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#fa7581" />
+    <meta name="theme-color" content="#ff7d7d" />
     <meta
       name="VIM"
       content="valorant inventory manager"
     />
+    <meta name="author" content="Colin Hartigan" />
+    <meta name="description" content="a better valorant inventory manager" />
     <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
     <!--
       manifest.json provides metadata used when your web app is installed on a
